Added twilio, R2, and removed distance tracking and validation
